create a basic table to list stars

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div><h1>{{pageTitle}}</h1>
-  <div>Welcome to the star catalog!</div>
+<div>
+  <h1>{{pageTitle}}</h1>
+  <sc-stars></sc-stars>
 </div>
 
 
 
-<router-outlet></router-outlet>
+<!-- <router-outlet></router-outlet> -->
