--- a/src/app/stars/star-list.component.html
+++ b/src/app/stars/star-list.component.html
@@ -1,6 +1,6 @@
 <div class='card'>
     <div class='card-header'>
-        Star List
+        {{pageTitle}}
     </div>
     <div class='card-body'>
         <div class='row'>
@@ -15,7 +15,8 @@
             </div>
         </div>
         <div class='table-responsive'>
-            <table class='table'>
+            <table class='table'
+            *ngIf='stars && stars.length'>
                 <thead>
                     <tr>
                         <th>
@@ -31,7 +32,14 @@
                     </tr>
                 </thead>
                 <tbody>
-                    
+                    <tr *ngFor='let star of stars'>
+                        <td></td>
+                        <td>{{ star.starSystem }}</td>
+                        <td>{{ star.starName }}</td>
+                        <td>{{ star.starDistance }}</td>
+                        <td>{{ star.apparentMag }}</td>
+                        <td>{{ star.stellarClass }}</td>
+                    </tr>
                 </tbody>
             </table>
         </div>
