add navbar and routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
-<div>
-  <h1>{{pageTitle}}</h1>
-  <sc-stars></sc-stars>
+<nav class='navbar navbar-expand navbar-light bg-light'>
+  <a class='navbar-brand'>{{pageTitle}}</a>
+  <ul class='nav nav-pills'>
+    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/welcome']">Home</a></li>
+    <li><a class='nav-link' routerLinkActive='active' [routerLink]="['/stars']">Star List</a></li>
+  </ul>
+</nav>
+<div class='container mt-3'>
+  <router-outlet></router-outlet>
 </div>
-
-
-
-<!-- <router-outlet></router-outlet> -->
