--- a/src/app/stars/star-detail.component.html
+++ b/src/app/stars/star-detail.component.html
@@ -1,12 +1,13 @@
-<div class='card' *ngIf='star'>
+<div class='card'>
     <div class='card-header'>
         {{pageTitle}}
     </div>
     <div class='row no-gutters'>
         <div class='col-md-5' style='background-color: lightgray;'>
+            <canvas #canvas></canvas>
             <!-- <img src='...' class='card-img' alt='...'> -->
         </div>
-        <div class='col-md-7'>
+        <div class='col-md-7' *ngIf='star'>
             <div class='card-body'>
                 <h5 class='card-title'>{{star.starName}}</h5>
                 <div class='table-responsive'>
@@ -36,13 +37,17 @@
                             <tr>
                                 <td>Right Ascension</td>
                                 <td>
-                                    <sc-right-ascension [rightAscension]='star.rightAscension'></sc-right-ascension>
+                                    <sc-right-ascension [rightAscension]='star.rightAscension'
+                                                        (decimalRightAscension)='onDecimalRightAscension($event)'>
+                                    </sc-right-ascension>
                                 </td>
                             </tr>
                             <tr>
                                 <td>Declination</td>
                                 <td>
-                                    <sc-declination [declination]='star.declination'></sc-declination>
+                                    <sc-declination [declination]='star.declination'
+                                                    (decimalDeclination)='onDecimalDeclination($event)'>
+                                    </sc-declination>
                                 </td>
                             </tr>
                         </tbody>
